--- a/package.json
+++ b/package.json
@@ -3,25 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.40",
+    "@types/react-bootstrap": "^0.32.29",
     "@types/react-dom": "^17.0.13",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.24",
+    "axios": "^0.26.1",
+    "caver-js": "^1.8.0",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "4.0.2",
+    "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4",
     "typescript": "^4.6.2",
-    "web-vitals": "^2.1.4",
-    "zustand": "^3.7.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
