--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@types/aos": "^3.0.4",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
+    "@types/qrcode.react": "^1.0.2",
     "@types/react": "^17.0.40",
     "@types/react-bootstrap": "^0.32.29",
     "@types/react-dom": "^17.0.13",
+    "@types/react-fontawesome": "^1.6.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.24",
     "aos": "^2.3.4",
     "axios": "^0.26.1",
     "caver-js": "^1.8.0",
     "framer-motion": "^4.1.17",
+    "qrcode.react": "^2.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-device-detect": "^2.1.2",
